# ase_extras

./: README.md  environment.yml  pyproject.toml
.github/workflows/: ci.yml
ase_extras/: property_writer.py
test/: test_property_writer.py
